[workspace]
members = [
    "wgpu-native",
    "wgpu-remote",
]

[patch.crates-io]
gfx-hal = { git = "https://github.com/hecrj/gfx", branch = "web" }
gfx-backend-empty = { git = "https://github.com/hecrj/gfx", branch = "web" }
gfx-backend-vulkan = { git = "https://github.com/hecrj/gfx", branch = "web" }
gfx-backend-dx11 = { git = "https://github.com/hecrj/gfx", branch = "web" }
gfx-backend-dx12 = { git = "https://github.com/hecrj/gfx", branch = "web" }
gfx-backend-metal = { git = "https://github.com/hecrj/gfx", branch = "web" }
gfx-backend-gl = { git = "https://github.com/hecrj/gfx", branch = "web" }
winit = { git = "https://github.com/hecrj/winit", branch = "web" }
